# fastapi-template

./: Dockerfile  README.md  pyproject.toml
app/: crud.py  database.py  main.py
app/api/: deps.py
app/api/api_v1/endpoints/: items.py  login.py  users.py
app/core/: config.py  security.py
app/crud/: base.py  crud_item.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/models/: item.py  user.py
